Add app layout, initial styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 // Base
 @import 'base/normalize';
-@import 'base/variables';
+@import 'base/mixins';
+@import 'base/css-variables';
 @import 'base/text';
 
 // Components
