--- a/src/styles/base/css-variables.scss
+++ b/src/styles/base/css-variables.scss
@@ -1,11 +1,15 @@
 :root {
 	--major: rgba(255, 255, 255, 0.87);
-	--bg: #242424;
+	--bg: #1d1d1d;
+	--bg-secondary: #242424;
+	--border: #4d4d4d;
 }
 
-@media (prefers-color-scheme: light) {
-	:root {
-		--major: #213547;
-		--bg: #ffffff;
-	}
-}
+// @media (prefers-color-scheme: light) {
+// 	:root {
+// 		--major: #213547;
+// 		--bg: #ffffff;
+// 		--bg-secondary: #f0f0f0;
+// 		--border: #eee;
+// 	}
+// }
