--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -1,6 +1,43 @@
 body {
-	display: flex;
+	margin: 0;
+	display: grid;
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
+	background-color: var(--bg);
+}
+
+#app {
+	padding: 2rem;
+	display: grid;
+	gap: 1.5rem;
+	grid-template-columns: 236px 525px;
+}
+
+@mixin box {
+	border: 1px solid #4d4d4d;
+	border-radius: 0.75rem;
+	background-color: var(--bg-secondary);
+}
+
+.profile {
+	@include box;
+	width: 236px;
+	padding: 18px 14px 24px;
+}
+
+.inventory {
+	@include box;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	width: 525px;
+	overflow: hidden;
+	background-color: var(--bg-secondary);
+	user-select: none;
+}
+
+.notification {
+	@include box;
+	grid-column: span 2;
+	padding: 18px 14px 24px;
 }
