--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -36,6 +36,26 @@ body {
 	user-select: none;
 }
 
+.inventory__cell {
+	$cols-count: 5;
+	$rows-count: 5;
+	height: 100px;
+	box-sizing: content-box;
+	border-top: 1px solid var(--border);
+	border-left: 1px solid var(--border);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	&:nth-child(-n + #{$cols-count}) {
+		border-top: none;
+	}
+
+	&:nth-child(#{$rows-count}n + 1) {
+		border-left: none;
+	}
+}
+
 .notification {
 	@include box;
 	grid-column: span 2;
