--- a/src/styles/base/mixins.scss
+++ b/src/styles/base/mixins.scss
@@ -5,3 +5,9 @@
 	display: block;
 	position: absolute;
 }
+
+@mixin box {
+	border: 1px solid #4d4d4d;
+	border-radius: 0.75rem;
+	background-color: var(--bg-secondary);
+}
