--- a/src/styles/base/css-variables.scss
+++ b/src/styles/base/css-variables.scss
@@ -3,6 +3,9 @@
 	--bg: #1d1d1d;
 	--bg-secondary: #242424;
 	--border: #4d4d4d;
+	--cursor-default: url('@/images/cursor-default.svg'), default;
+	--cursor-pointer: url('@/images/cursor-pointer.svg'), pointer;
+	--cursor-move: url('@/images/cursor-move.svg'), move;
 }
 
 // @media (prefers-color-scheme: light) {
