Add Item styles

--- a/src/styles/base/css-variables.scss
+++ b/src/styles/base/css-variables.scss
@@ -2,6 +2,7 @@
 	--major: rgba(255, 255, 255, 0.87);
 	--bg: #1d1d1d;
 	--bg-secondary: #242424;
+	--bg-hover: #2f2f2f;
 	--border: #4d4d4d;
 	--font-main: 'Inter', sans-serif;
 	--cursor-default: url('@/images/cursor-default.svg'), default;
