Add Details popup and form

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,4 +6,7 @@
 @import 'base/layout';
 
 // Components
+@import 'components/button';
+@import 'components/divider';
+@import 'components/form';
 @import 'components/skeleton';
