--- a/src/styles/base/css-variables.scss
+++ b/src/styles/base/css-variables.scss
@@ -1,13 +1,28 @@
 :root {
 	--major: rgba(255, 255, 255, 0.87);
+	--muted: rgba(255, 255, 255, 0.4);
 	--bg: #1d1d1d;
 	--bg-secondary: #242424;
 	--bg-hover: #2f2f2f;
+	--bg-overlay: #{rgba(#262626, 0.6)};
 	--border: #4d4d4d;
+	--danger: #fa7272;
+	--inverse: #2d2d2d;
+	--intense: #ffffff;
+
 	--font-main: 'Inter', sans-serif;
+
 	--cursor-default: url('@/images/cursor-default.svg'), default;
 	--cursor-pointer: url('@/images/cursor-pointer.svg'), pointer;
 	--cursor-move: url('@/images/cursor-move.svg'), move;
+
+	--duration-sm: 0.12s;
+	--duration-md: 0.2s;
+	--duration-lg: 0.3s;
+	--duration-xl: 0.6s;
+	--duration-xxl: 1s;
+
+	--radius-xs: 4px;
 }
 
 // @media (prefers-color-scheme: light) {
