--- a/src/styles/base/mixins.scss
+++ b/src/styles/base/mixins.scss
@@ -11,3 +11,18 @@
 	border-radius: 0.75rem;
 	background-color: var(--bg-secondary);
 }
+
+@mixin placeholder {
+	&:-ms-input-placeholder {
+		@content;
+	}
+	&:-moz-placeholder {
+		@content;
+	}
+	&::-moz-placeholder {
+		@content;
+	}
+	&::-webkit-input-placeholder {
+		@content;
+	}
+}
