--- a/src/styles/base/normalize.scss
+++ b/src/styles/base/normalize.scss
@@ -40,3 +40,12 @@ button {
 button {
 	touch-action: manipulation;
 }
+
+:focus {
+	outline: none;
+}
+
+:focus-visible {
+	border-radius: var(--radius-xs);
+	outline: 4px solid rgba(50, 151, 211, 0.3);
+}
