Add cursors for the light theme

--- a/src/styles/base/css-variables.scss
+++ b/src/styles/base/css-variables.scss
@@ -31,5 +31,10 @@
 // 		--bg: #ffffff;
 // 		--bg-secondary: #f0f0f0;
 // 		--border: #eee;
+// 		--bg-overlay: #{rgba(#aaaaaa, 0.6)};
+
+// 		--cursor-default: url('@/images/cursor-default-light.svg'), default;
+// 		--cursor-pointer: url('@/images/cursor-pointer-light.svg'), pointer;
+// 		--cursor-move: url('@/images/cursor-move-light.svg'), move;
 // 	}
 // }
