Add items quantity changing and removing

--- a/src/styles/base/css-variables.scss
+++ b/src/styles/base/css-variables.scss
@@ -23,6 +23,10 @@
 	--duration-xxl: 1s;
 
 	--radius-xs: 4px;
+	--radius-sm: 6px;
+	--radius-md: 8px;
+	--radius-lg: 12px;
+	--radius-xxl: 24px;
 }
 
 // @media (prefers-color-scheme: light) {
