--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -1,10 +1,13 @@
+html {
+	background-color: var(--bg);
+}
+
 body {
 	margin: 0;
 	display: grid;
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
-	background-color: var(--bg);
 	cursor: var(--cursor-default);
 }
 
