Button style reset mixin

--- a/src/styles/base/mixins.scss
+++ b/src/styles/base/mixins.scss
@@ -26,3 +26,12 @@
 		@content;
 	}
 }
+
+@mixin buttonReset() {
+	padding: 0;
+	border: 0 none;
+	appearance: none;
+	box-shadow: none;
+	background: none;
+	cursor: pointer;
+}
