Edit cursor styles

--- a/src/styles/base/css-variables.scss
+++ b/src/styles/base/css-variables.scss
@@ -14,7 +14,7 @@
 
 	--cursor-default: url('@/images/cursor-default.svg'), default;
 	--cursor-pointer: url('@/images/cursor-pointer.svg'), pointer;
-	--cursor-move: url('@/images/cursor-move.svg'), move;
+	--cursor-move: url('@/images/cursor-move.svg'), grabbing;
 
 	--duration-sm: 0.12s;
 	--duration-md: 0.2s;
