--- a/src/styles/base/mixins.scss
+++ b/src/styles/base/mixins.scss
@@ -7,7 +7,7 @@
 }
 
 @mixin box {
-	border: 1px solid #4d4d4d;
+	border: 1px solid var(--border);
 	border-radius: 0.75rem;
 	background-color: var(--bg-secondary);
 }
