--- a/src/styles/base/text.scss
+++ b/src/styles/base/text.scss
@@ -3,6 +3,6 @@
 	font-size: 16px;
 	line-height: 24px;
 	font-weight: 400;
-	color-scheme: light dark;
+	color-scheme: dark light;
 	color: var(--major);
 }
