Add hover color to the light theme

--- a/src/styles/base/css-variables.scss
+++ b/src/styles/base/css-variables.scss
@@ -6,6 +6,7 @@
 	--bg: #f0f0f5;
 	--bg-secondary: #fafafc;
 	--border: #cccccc;
+	--bg-hover: #f0f0f5;
 	--bg-overlay: #{rgba(#ffffff, 0.6)};
 
 	--skeleton-gradient: linear-gradient(90deg, #e9e9eb 0%, #ececed 51.04%, #e6e6e9 100%);
