--- a/src/styles/base/css-variables.scss
+++ b/src/styles/base/css-variables.scss
@@ -2,6 +2,8 @@
 	--white: #ffffff;
 	--intense: #1d1d1d;
 	--major: #213547;
+	--minor: #a1b5c7;
+	--muted: #cccccc;
 	--danger: #{darken(#fa7272, 7)};
 	--bg: #f0f0f5;
 	--bg-secondary: #fafafc;
@@ -30,23 +32,21 @@
 	--radius-xxl: 24px;
 }
 
-@media (prefers-color-scheme: dark) {
-	:root {
-		--major: rgba(255, 255, 255, 0.87);
-		--muted: rgba(255, 255, 255, 0.4);
-		--bg: #1d1d1d;
-		--bg-secondary: #242424;
-		--bg-hover: #2f2f2f;
-		--bg-overlay: #{rgba(#262626, 0.6)};
-		--border: #4d4d4d;
-		--danger: #fa7272;
-		--inverse: #2d2d2d;
-		--intense: #ffffff;
+[data-theme="dark"] {
+	--major: rgba(255, 255, 255, 0.87);
+	--muted: rgba(255, 255, 255, 0.4);
+	--bg: #1d1d1d;
+	--bg-secondary: #242424;
+	--bg-hover: #2f2f2f;
+	--bg-overlay: #{rgba(#262626, 0.6)};
+	--border: #4d4d4d;
+	--danger: #fa7272;
+	--inverse: #2d2d2d;
+	--intense: #ffffff;
 
-		--skeleton-gradient: linear-gradient(90deg, #3c3c3c 0%, #444444 51.04%, #333333 100%);
+	--skeleton-gradient: linear-gradient(90deg, #3c3c3c 0%, #444444 51.04%, #333333 100%);
 
-		--cursor-default: url('@/images/cursor-default.svg'), default;
-		--cursor-pointer: url('@/images/cursor-pointer.svg'), pointer;
-		--cursor-move: url('@/images/cursor-move.svg'), move;
-	}
+	--cursor-default: url('@/images/cursor-default.svg'), default;
+	--cursor-pointer: url('@/images/cursor-pointer.svg'), pointer;
+	--cursor-move: url('@/images/cursor-move.svg'), move;
 }
